// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Radius > handles none 1`] = `
{
  "classNames": [
    "_root_979529",
    "_--radius-none_979529",
  ],
}
`;

exports[`Styles/Radius > handles responsive value 1`] = `
{
  "classNames": [
    "_root_979529",
    "_--radius-small_979529",
    "_--radius-none--m_979529",
    "_--radius-circular--l_979529",
  ],
}
`;

exports[`Styles/Radius > handles undefined value 1`] = `null`;

exports[`Styles/Radius > handles value 1`] = `
{
  "classNames": [
    "_root_979529",
    "_--radius-large_979529",
  ],
}
`;
